# backend_template

./: .dockerignore  .env-example  .env.docker  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  servers.json  setup.cfg
src/: config.py  database.py  main.py  redis_client.py
src/api/v1/: routers.py
src/auth/: README.md  utils.py
src/core/: auth_config.py  config.py  database.py  middlewares.py  rabbit_config.py  redis_client.py  redis_config.py  s3_config.py
src/logger/: logger.py
src/migrations/: env.py
src/migrations/versions/: 2025_03_19_2151-22a942f0023e_initial.py  2025_06_07_1655-6950b59bd044_create_users_table.py
src/models/: __init__.py
src/project_logs/: logger_config.py
src/scripts/: init_data.py
src/user/: model.py  models.py  routers.py
tests/: conftest.py  database.py  settings.py  test_main.py
