[project]
name = "backend-template"
version = "0.2.0"
description = "simple backend template using a FastAPI"
authors = [
    {name = "puker228",email = "karatelanalov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "bcrypt>=4.3.0",
    "fastapi[all]>=0.116.1",
    "faststream[rabbit]>=0.6.3",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "minio>=7.2.16",
    "redis>=6.4.0",
    "sentry-sdk[fastapi]>=2.37.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
